kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
  labels:
    app: caddy-uat
spec:
  selector:
    matchLabels:
      app: caddy-uat
  template:
    metadata:
      labels:
        app: caddy-uat
    spec:
      containers:
      - name: caddy
