kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-clusterip
spec:
  type: ClusterIP
  selector:
    app: caddy-uat
    variant: uat
